# AttitudeMathLib

./: CMakeLists.txt
AML/: AML.h  AMLDCM.cpp  AMLDCM.h  AMLMatrix33.cpp  AMLMatrix33.h  AMLVector3.cpp  AMLVector3.h  CMakeLists.txt
example/: CMakeLists.txt  main.cpp
test/: AMLVector3Test.cpp  CMakeLists.txt
